<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.sleekdeveloper.android.securechat.chats.ChatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatsFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".chats.ChatsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:chats="@{viewmodel.chats}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/chat_list_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/composeMsgFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:clickable="true"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>