<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/authFragment">

    <fragment
        android:id="@+id/authFragment"
        android:name="com.sleekdeveloper.android.securechat.auth.AuthFragment"
        android:label="auth_fragment"
        tools:layout="@layout/auth_fragment" >
        <action
            android:id="@+id/action_authFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_authFragment_to_verifyCodeFragment"
            app:destination="@id/verifyCodeFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.sleekdeveloper.android.securechat.chats.ChatsFragment"
        android:label="chats_fragment"
        tools:layout="@layout/chats_fragment" >
        <action
            android:id="@+id/action_chatsFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.sleekdeveloper.android.securechat.register.RegisterFragment"
        android:label="register_fragment"
        tools:layout="@layout/register_fragment" />
    <fragment
        android:id="@+id/verifyCodeFragment"
        android:name="com.sleekdeveloper.android.securechat.auth.verify.VerifyCodeFragment"
        android:label="verify_code_fragment"
        tools:layout="@layout/verify_code_fragment" >
        <action
            android:id="@+id/action_verifyCodeFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <argument
            android:name="phoneNumber"
            app:argType="string" />
        <argument
            android:name="verificationId"
            app:argType="string" />
        <action
            android:id="@+id/action_verifyCodeFragment_to_chatsFragment"
            app:destination="@id/chatsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.sleekdeveloper.android.securechat.chat.ChatFragment"
        android:label="ChatFragment" >
        <argument
            android:name="otherUserDetail"
            app:argType="com.sleekdeveloper.android.securechat.data.source.domain.UserDetail" />
    </fragment>
</navigation>